# byosp

./: README.org
doc/: build_doc.sh  conf.py
src/clojure/: .gitignore  project.clj
src/clojure/doc/: intro.md
src/clojure/src/bpg/: core.clj
src/clojure/test/bpg/: core_test.clj
src/python/: .flake8  .gitignore  noxfile.py  pyproject.toml
src/python/docs/: conf.py  reference.rst
src/python/src/bpg/: __init__.py  bpg.py
src/python/tests/: test_bpg.py
